--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -183,6 +183,10 @@ h1,h2
 
 .storyElement div
 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     height: 100%;
     width: 100%;
@@ -213,7 +217,7 @@ h1,h2
 {
     margin-top: 50px;
     width: 100%;
-    height: fit-content;
+    height: 20%;
 }
 
 .trioSlideShowSlide
