--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,9 @@
     --subHeaderSize: 2.5vw;
     --TextColor: #fff;
     --headerSize: 5vw;
+    --bottomLayer: 1;
+    --midLayer: 2;
+    --topLayer: 3
 
 }
 
@@ -33,6 +36,64 @@ h5
 h1,h2
 {
     font-weight: bold;
+}
+
+.navigationMenu
+{
+    position:fixed;
+    z-index: var(--topLayer);
+    right: 0;
+    bottom: 10%;
+    width: 250px;
+    height: 200px;
+    border: solid;
+    border-right: transparent;
+    border-radius: 20px;
+    border-color: white;
+    background-color: black;
+}
+
+.homeButton
+{
+    width: 100%;
+    height: 33%;
+    background-color: white;
+}
+
+.navigationMenuLinks
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 66%;
+}
+
+.navigationMenuIcon
+{
+    width: 100%;
+    height: 100%;
+}
+
+.navigationMenuIcon img
+{
+    height: 100%;
+    width: 100%;
+}
+
+.navigationMenuLink
+{
+    width: 100%;
+    height: 33%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100%;
+    text-align: right;
+}
+
+.navigationMenuLink a
+{
+    color: white;
+   
 }
 
 .heroSection
@@ -109,8 +170,7 @@ h1,h2
 {
     border-bottom: solid;
     border-color: whitesmoke;
-    position: relative;
-    height: 800px;
+    height: fit-content;
     width: 100%;
     background-color: #000000;
 }
@@ -120,6 +180,7 @@ h1,h2
     position: relative;
     display: flex;
     flex-direction: row;
+    z-index: var(--topLayer);
     width: 100%;
     height: fit-content;
     margin-bottom: 30px;
@@ -136,12 +197,25 @@ h1,h2
 
 .sectionContainer
 {
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: last baseline;
+}
+
+.stickySectionContainer
+{
     position: sticky;
     top: 0;
     width: 100%;
     height: 100vh;
     justify-content: center;
     align-items: last baseline;
+}
+
+.sectionContentContainer{
+    height: 100%;
+    width: 100%;
 }
 
 .sectionVideo
@@ -159,8 +233,6 @@ h1,h2
 .storySlideShow
 {
     position: relative;
-    left: 50%;
-    transform: translate(-50%);
     width: 100vw;
     height:80vh;
 }
@@ -168,35 +240,48 @@ h1,h2
 .storyElement
 {
     position: absolute;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
     left: 50%;
     transform: translate(-50%);
     width: 100%;
     height: 100%;
     bottom: 0;
     opacity: 0;
+   
 }
 
-.storyElement div
+.storyElementCenteredLeftAllignedText
 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
+    position: absolute;
+    text-align: left;
+    left: 50%;
+    top: 50%;
+    transform: translate(-25%, -50%);
+    height: fit-content;
     width: 100%;
+}
+
+.storyElementMultiElementContainer
+{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: grid;
+    height: 50%;
+    width: 75vw;
+    margin-left: 20px;
+    margin-right: 20px;
+    grid-template-columns: 50% 50%;
+    text-align: right;
+    grid-template-rows: 100%;
 }
 
 .storyElement div img
 {
     height: 100%;
     width: 100%;
-    object-fit: contain;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .storyElement.shown
@@ -217,18 +302,20 @@ h1,h2
 {
     margin-top: 50px;
     width: 100%;
-    height: 20%;
+    height: fit-content;
 }
 
 .trioSlideShowSlide
 {
-    height: 100%;
+    height: var(--p-height);
     width: 100%;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
     will-change: transform;
+    --p-height: 195px
+    
 }
 
 .trioSlideShow div picture img
@@ -247,11 +334,17 @@ h1,h2
         --p-width:265px;
         --p-height: 150px
     }
+    .trioSlideShowSlide{
+        --p-height: 150px
+    }
 }
 
 @media only screen and (max-width: 734px)and (max-width:734px) {
     .trioSlideShow div picture img {
         --p-width:192px;
+        --p-height: 108px
+    }
+    .trioSlideShowSlide{
         --p-height: 108px
     }
 }
