--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -44,12 +44,13 @@ h1,h2
     z-index: var(--topLayer);
     right: 0;
     bottom: 10%;
-    width: 250px;
-    height: 200px;
+    width: 150px;
+    height: fit-content;
     border: solid;
     border-right: transparent;
     border-radius: 20px;
     border-color: white;
+    border-width: 0.5px;
     background-color: black;
 }
 
@@ -173,6 +174,7 @@ h1,h2
     height: fit-content;
     width: 100%;
     background-color: #000000;
+    margin-bottom: 100px;
 }
 
 .sectionHeader
@@ -180,10 +182,10 @@ h1,h2
     position: relative;
     display: flex;
     flex-direction: row;
-    z-index: var(--topLayer);
+    z-index: var(--midLayer);
     width: 100%;
     height: fit-content;
-    margin-bottom: 30px;
+    margin-bottom: 5%;
 }
 
 .sectionHeaderText
@@ -197,10 +199,8 @@ h1,h2
 
 .sectionContainer
 {
-    height: 100%;
+    height: fit-content;
     width: 100%;
-    justify-content: center;
-    align-items: last baseline;
 }
 
 .stickySectionContainer
@@ -234,7 +234,7 @@ h1,h2
 {
     position: relative;
     width: 100vw;
-    height:80vh;
+    height:50vh;
 }
 
 .storyElement
@@ -255,9 +255,9 @@ h1,h2
     text-align: left;
     left: 50%;
     top: 50%;
-    transform: translate(-25%, -50%);
+    transform: translate(-50%, -50%);
     height: fit-content;
-    width: 100%;
+    width: fit-content;
 }
 
 .storyElementMultiElementContainer
@@ -267,21 +267,30 @@ h1,h2
     top: 50%;
     transform: translate(-50%, -50%);
     display: grid;
-    height: 50%;
+    height: fit-content;
     width: 75vw;
-    margin-left: 20px;
-    margin-right: 20px;
     grid-template-columns: 50% 50%;
     text-align: right;
     grid-template-rows: 100%;
+}
+
+.storyElementMultiElementContainerAllignTextLeft
+{
+    text-align: left;
+    margin-left: 20px;
+}
+
+.storyElementMultiElementContainerAllignTextRight
+{
+    text-align: right;
+    margin-right: 20px;
 }
 
 .storyElement div img
 {
     height: 100%;
     width: 100%;
-    margin-left: 20px;
-    margin-right: 20px;
+    object-fit: contain;
 }
 
 .storyElement.shown
