--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -88,7 +88,7 @@ h5
     border-right: transparent;
     border-radius: 20px;
     border-color: white;
-    border-width: 0.5px;
+    border-width: 2px;
     background-color: black;
     --p-width: 370px;
 }
@@ -101,6 +101,11 @@ h5
 .yellowBackground
 {
     background-color: yellow;
+}
+
+.bisqueBackground
+{
+    background-color: bisque;
 }
 
 .homeButton
@@ -316,6 +321,11 @@ h5
     height: fit-content;
 }
 
+.quotationTextContainer h2
+{
+    font-size: 2.5vw;
+}
+
 .quotationQuotedPeopleText h3
 {
     color: goldenrod;
@@ -338,11 +348,6 @@ h5
     width: 75%;
     height: 100%;
     text-align: left;
-}
-
-.quotationTextContainer h2
-{
-    font-size: 2.5vw;
 }
 
 .quotationBorder
@@ -379,11 +384,17 @@ h5
     flex-direction: column;
     width: 100%;
     height: 100%;
-    text-align: left;
+    text-align: justify;
+}
+
+.Margin
+{
+    margin-left: 5%;
 }
 
 .sectionContainer
 {
+    position: relative;
     height: fit-content;
     width: 100%;
 }
@@ -506,7 +517,7 @@ h5
 {
     left: 50%;
     opacity: 1;
-    animation: fade-in-right 0.3s linear;
+    animation: fade-in-right 1.0s linear;
 }
 
 .storyElement.hidden
@@ -548,6 +559,105 @@ h5
    
 }
 
+.statsShowcase
+{
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    width: 100%;
+    height: fit-content;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%);
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.statImg
+{
+    width: var(--p-width);
+    height: var(--p-height);
+    flex: 0 0 auto;
+    --p-width:345px;
+    --p-height:195px;
+}
+
+.statImg img
+{
+    width: 100%;
+    height: 100%;
+}
+
+.statQuotation
+{
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    width: 75%;
+    height: fit-content;
+    text-align: justify;
+    transform: translate(-50%, -65%);
+}
+
+.statQuotation h2
+{
+    font-size: 2.5vw;
+}
+
+.statsQuotedPeopleText
+{
+    position: absolute;
+    left:55%;
+    top:80%;
+    width: 100%;
+    height: fit-content;
+}
+
+.statsQuotedPeopleText h3
+{
+    color: goldenrod;
+}
+
+.statsQuotedPeopleTaskText
+{
+    position: absolute;
+    left:55%;
+    top:90%;
+    width: 100%;
+    height: fit-content;
+}
+
+.laptopImage
+{
+    position: absolute;
+    width: 50%;
+    height: 45%;
+    left: 50%;
+    top:10%;
+    transform: translate(-50%, -10%);
+}
+
+.laptopImage img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.doubleDescriptionText
+{
+    position: absolute;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100%;
+    width: 60%;
+    height: fit-content;
+    bottom: 3%;
+    left: 50%;
+    transform: translate(-50%);
+}
+
 @media only screen and (max-width: 1068px)and (max-width:1068px) {
     .trioSlideShow div picture img {
         --p-width:265px;
@@ -567,6 +677,11 @@ h5
     .navigationMenuLink
     {
         --dynamic-font-size: 15px;
+    }
+    .statImg
+    {
+        --p-width:150px;
+        --p-height: 75px
     }
 }
 
@@ -589,6 +704,11 @@ h5
     .navigationMenuLink
     {
         --dynamic-font-size: 10px;
+    }
+    .statImg
+    {
+        --p-width:80px;
+        --p-height: 40px
     }
 }
 
