--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -226,8 +226,8 @@ h5
     width: 10%;
     height: 100%;
     margin-left: 15%;
+    margin-top: 4%;
     margin-right: 50px;
-    margin-top: 5px;
     z-index: 20;
 }
 
@@ -271,6 +271,7 @@ h5
     width: 100%;
     background-color: #000000;
     margin-bottom: 100px;
+    margin-top: 50px;
 }
 
 .sectionOverlay
@@ -287,6 +288,7 @@ h5
     z-index: var(--midLayer);
     width: 100%;
     height: fit-content;
+    transform: translate(0%, 20%);
     margin-bottom: 5%;
 }
 
@@ -384,7 +386,8 @@ h5
     flex-direction: column;
     width: 100%;
     height: 100%;
-    text-align: justify;
+    margin-top: 3%;
+    text-align: left;
 }
 
 .Margin
