--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,12 @@
     --headerSize: 5vw;
     --bottomLayer: 1;
     --midLayer: 2;
-    --topLayer: 3
+    --topLayer: 3;
+
+    --golden: #926d3c;
+    --days: #7cb9ab;
+    --district: #ffea00;
+    --deluxe: #b98765;
 }
 
 html
@@ -45,31 +50,107 @@ body
     font-style: normal;
 }
   
-p, h1,h2,h3,h4, h5
+p,a,h1,h2,h3,h4,h5
 {
     margin: 0;
     color: var(--TextColor);
 }
 
-h1,h2
+h1, h2 
 {
-    font-size: var(--headerSize);
+    font-size: 80px; /* Min: 18px, Pref: 2.5% of viewport, Max: 32px */
+    line-height: 1.3;
     font-weight: bold;
 }
-
-h3
+  
+h3 
 {
-    font-size: var(--subSubHeaderSize);
+    font-size: 40px; /* Min: 14px, Pref: 2% of viewport, Max: 24px */
+    line-height: 1.4;
+    font-weight: 100;
+}
+  
+h4 
+{
+    font-size: 30px; /* Min: 12px, Pref: 1.75% of viewport, Max: 20px */
+    line-height: 1.4;
+}
+  
+h5 
+{
+    font-size: 1vw; /* Min: 10px, Pref: 1.5% of viewport, Max: 16px */
+    line-height: 1.5;
 }
 
-h4
+p 
 {
-    font-size: var(--flowTextSize);
+    font-size: 20px; /* Min: 14px, Pref: 2.5% of viewport, Max: 17.6px */
+    line-height: 1.6; /* Ensure readability */
+    margin: 0.5em 0;  /* Add spacing for better flow */
 }
 
-h5
+/*media queries for text sizes*/
+@media only screen and (max-width: 1068px)and (max-width:1068px) {
+   
+    h1,h2 {
+        font-size: 40px; /* Min: 18px, Pref: 2.5% of viewport, Max: 32px */
+        line-height: 1.3;
+        font-weight: bold;
+      }
+      
+      h3 {
+        font-size: 20px; /* Min: 14px, Pref: 2% of viewport, Max: 24px */
+        line-height: 1.4;
+        font-weight: 100;
+      }
+      
+      h4 {
+        font-size: 16px; /* Min: 12px, Pref: 1.75% of viewport, Max: 20px */
+        line-height: 1.4;
+      }
+      
+      h5 {
+        font-size: 1vw; /* Min: 10px, Pref: 1.5% of viewport, Max: 16px */
+        line-height: 1.5;
+      }
+    p 
+    {
+        font-size: 15px; /* Min: 14px, Pref: 2.5% of viewport, Max: 17.6px */
+        line-height: 1.6; /* Ensure readability */
+        margin: 0.5em 0;  /* Add spacing for better flow */
+    }
+}
+
+@media only screen and (max-width: 734px)and (max-width:734px) 
 {
-    font-size: var(--subHeaderSize);
+    h1,h2 {
+        font-size: 20px; /* Min: 18px, Pref: 2.5% of viewport, Max: 32px */
+        line-height: 1.3;
+        font-weight: bold;
+      }
+      
+      h3 {
+        font-size: 12px; /* Min: 14px, Pref: 2% of viewport, Max: 24px */
+        line-height: 1.4;
+        font-weight: 100;
+      }
+      
+      h4 {
+        font-size: 10px; /* Min: 12px, Pref: 1.75% of viewport, Max: 20px */
+        line-height: 1.4;
+      }
+      
+      h5 {
+        font-size: 1vw; /* Min: 10px, Pref: 1.5% of viewport, Max: 16px */
+        line-height: 1.5;
+      }
+    p 
+    {
+        font-size: 8px; /* Min: 14px, Pref: 2.5% of viewport, Max: 17.6px */
+        line-height: 1.6; /* Ensure readability */
+        margin: 0.5em 0;  /* Add spacing for better flow */
+    }
+  
 }
 
 .navigationMenu
@@ -79,9 +160,10 @@ h5
     flex-direction: column;
     z-index: var(--topLayer);
     right: 0;
-    bottom: 10%;
+    bottom: 2%;
+    right: -5%;
     width: var(--p-width);
-    height: fit-content;
+    height: var(--p-height);
     border: solid;
     align-items: center;
     justify-content: center;
@@ -90,37 +172,40 @@ h5
     border-color: white;
     border-width: 2px;
     background-color: black;
-    --p-width: 370px;
+    --p-width: 400px;
+    --p-height: 250px
 }
 
 .aquaBackground
 {
-    background-color: aqua;
+    background-color: var(--days);
 }
 
 .yellowBackground
 {
-    background-color: yellow;
+    background-color: var(--district);
 }
 
 .bisqueBackground
 {
-    background-color: bisque;
+    background-color: var(--deluxe);
 }
 
 .homeButton
 {
     display: flex;
     justify-content: center;
-    width: 100%;
-    height:100%;
+    height:var(--p-height);
+    width: var(--p-width);
     align-self: center;
+    --p-width: 70px;
+    --p-height: 70px;
 }
 
 .homeButton img
 {
-    height:70px;
-    width: 70px;
+    height: 100%;
+    width: 100%;
     align-self: center;
 }
 
@@ -134,26 +219,27 @@ h5
 
 .navigationMenuIcon
 {
-    width: 15%;
+    width: 5%;
     height: 50%;
+    margin-left: 10px;
 }
 
 .navigationMenuIcon.blue
 {
-    color: blue;
-    background-color: blue;
+    color: var(--days);
+    background-color: var(--days);
 }
 
 .navigationMenuIcon.yellow
 {
-    color: yellow;
-    background-color: yellow;
+    color: var(--district);
+    background-color: var(--district);
 }
 
 .navigationMenuIcon.lachs
 {
-    color: bisque;
-    background-color: bisque;
+    color: var(--deluxe);
+    background-color: var(--deluxe);
 }
 
 .navigationMenuLink
@@ -161,7 +247,7 @@ h5
     width: 100%;
     height: 33%;
     display: grid;
-    grid-template-columns: 50% 10%;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 100%;
     text-align: right;
     justify-content: center;
@@ -173,7 +259,6 @@ h5
 
 .navigationMenuLink a
 {
-    color: white;
     text-decoration: none;
 }
 
@@ -298,7 +383,11 @@ h5
 
 .quotationContainer
 {
+    display: flex;
+    flex-direction: column;
     position: relative;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: var(--p-height);
     --p-height: 600px
@@ -317,26 +406,17 @@ h5
 .quotationQuotedPeopleText
 {
     position: absolute;
-    top: 55%;
+    top: 40%;
     left: 60%;
     width: 100%;
     height: fit-content;
 }
 
-.quotationTextContainer h2
-{
-    font-size: 2.5vw;
-}
-
-.quotationQuotedPeopleText h3
-{
-    color: goldenrod;
-}
 
 .quotationQuotedPeopleTaskText
 {
     position: absolute;
-    top: 70%;
+    top: 45%;
     left: 60%;
     width: 100%;
     height: fit-content;
@@ -346,7 +426,7 @@ h5
 {
     position:absolute;
     top: 10%;
-    left: 43%;
+    left: 50%;
     width: 75%;
     height: 100%;
     text-align: left;
@@ -358,22 +438,21 @@ h5
     border-left: solid;
     border-top: solid;
     border-bottom: solid;
-   
     left: 20%;
     bottom: 0;
-    width: 80%;
+    width: 90%;
     height: 100%;
     transform-origin: left bottom;
 }
 
 .borderGold
 {
-    border-color: gold;
+    border-color: var(--golden);
 }
 
 .borderLachs
 {
-    border-color: bisque;
+    border-color: var(--deluxe);
 }
 
 .quotationBorder.seen{
@@ -387,12 +466,13 @@ h5
     width: 100%;
     height: 100%;
     margin-top: 3%;
+    left: 50%;
     text-align: left;
 }
 
 .Margin
 {
-    margin-left: 5%;
+    margin-left: 15%;
 }
 
 .sectionContainer
@@ -431,7 +511,10 @@ h5
 
 .storySlideShow
 {
-    position: relative;
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%);
     width: 100vw;
     height:50vh;
 }
@@ -439,8 +522,8 @@ h5
 .storyElement
 {
     position: absolute;
-    left: 50%;
-    transform: translate(-50%);
+    left: 0;
+    
     width: 100%;
     height: 100%;
     bottom: 0;
@@ -452,7 +535,6 @@ h5
 .storyElementCenteredLeftAllignedText
 {
     position: absolute;
-    
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -467,27 +549,15 @@ h5
     top: 50%;
     transform: translate(-50%, -50%);
     display: grid;
-    height: fit-content;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
     width: 75vw;
     grid-template-columns: 50% 50%;
     grid-template-rows: 100%;
 }
 
-.storyElementMultiElementContainerRightCenteredContainer
-{
-    position: absolute;
-    left: 55%;
-    top: 50%;
-    transform: translate(0, -45%);
-}
 
-.storyElementMultiElementContainerLeftCenteredContainer
-{
-    position: absolute;
-    right: 0;
-    top: 45%;
-    transform: translate(0, -45%);
-}
 
 .storyElementMultiElementContainerVideo
 {
@@ -518,7 +588,6 @@ h5
 
 .storyElement.shown
 {
-    left: 50%;
     opacity: 1;
     animation: fade-in-right 1.0s linear;
 }
@@ -581,7 +650,7 @@ h5
 {
     width: var(--p-width);
     height: var(--p-height);
-    flex: 0 0 auto;
+    
     --p-width:345px;
     --p-height:195px;
 }
@@ -596,20 +665,15 @@ h5
 {
     position: absolute;
     top: 65%;
-    left: 50%;
+    left: 70%;
     width: 75%;
     height: fit-content;
     text-align: justify;
     transform: translate(-50%, -65%);
 }
 
-.statQuotation h2
-{
-    font-size: 2.5vw;
-}
-
 .statsQuotedPeopleText
-{
+{   
     position: absolute;
     left:55%;
     top:80%;
@@ -617,28 +681,44 @@ h5
     height: fit-content;
 }
 
-.statsQuotedPeopleText h3
+.deluxeLogo
 {
-    color: goldenrod;
+    position: absolute;
+    left: 25%;
+    top: 55%;
+    width: var(--p-width);
+    height: var(--p-heigth);
+    --p-width: 155px;
+    --p-heigth: 77px;
+}
+
+.deluxeLogo img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.golden
+{
+    color: var(--golden);
 }
 
 .statsQuotedPeopleTaskText
 {
     position: absolute;
     left:55%;
-    top:90%;
+    top:85%;
     width: 100%;
     height: fit-content;
 }
 
 .laptopImage
 {
-    position: absolute;
+    margin-top: 50px;
+    margin-bottom: 20px;
     width: 50%;
     height: 45%;
-    left: 50%;
-    top:10%;
-    transform: translate(-50%, -10%);
 }
 
 .laptopImage img
@@ -650,15 +730,69 @@ h5
 
 .doubleDescriptionText
 {
-    position: absolute;
+    position: relative;
     display: grid;
+    justify-content: center;
+    align-items: center;
     grid-template-columns: 50% 50%;
     grid-template-rows: 100%;
-    width: 60%;
-    height: fit-content;
-    bottom: 3%;
+    width: 100%;
+    height: 100%;
+    text-align: left;
+}
+
+.doubleDescriptionTextContainer
+{
+    position: relative;
+}
+
+.doubleDescriptionTextContainer h4
+{
+    position: absolute;
     left: 50%;
-    transform: translate(-50%);
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.laptopSlidingImage
+{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.laptopSlidingImage img
+{
+    width: 80%;
+    height: 80%;
+}
+
+@media  screen and (max-width: 1068px)and (max-width:1068px) {
+
+    @media (orientation: portrait) {
+        .storyElementMultiElementContainer
+        {
+        grid-template-rows: 50% 50%;
+        grid-template-columns: 100%;
+        }
+        .storyElementMultiElementContainerAllignTextRight
+        {
+            grid-row: 2;
+            text-align: center;
+            margin-right: 0px;
+        }
+        .storyElementMultiElementContainerAllignTextLeft
+        {
+        text-align: center;
+        margin-left: 0px;
+        }
+        .storyElement div
+        {
+            height: 100%;
+        }
+    }
+
+    
 }
 
 @media only screen and (max-width: 1068px)and (max-width:1068px) {
@@ -671,11 +805,12 @@ h5
     }
     .quotationContainer
     {
-        --p-height: 300px;
+        --p-height:500px;
     }
     .navigationMenu
     {
-        --p-width: 250px
+        --p-width: 250px;
+        --p-height: 100px;
     }
     .navigationMenuLink
     {
@@ -685,6 +820,11 @@ h5
     {
         --p-width:150px;
         --p-height: 75px
+    }
+    .homeButton
+    {
+        --p-width: 35px;
+        --p-height: 35px;
     }
 }
 
@@ -698,11 +838,12 @@ h5
     }
     .quotationContainer
     {
-        --p-height: 150px;
+        --p-height: 300px;
     }
     .navigationMenu
     {
-        --p-width: 200px
+        --p-width: 150px;
+        --p-height: 100px;
     }
     .navigationMenuLink
     {
@@ -712,6 +853,11 @@ h5
     {
         --p-width:80px;
         --p-height: 40px
+    }
+    .homeButton
+    {
+        --p-width: 17px;
+        --p-height: 17px;
     }
 }
 
@@ -775,12 +921,12 @@ h5
     0%
     {
         opacity: 0;
-        left: 100%;
+        left: 50%;
     }
     100%
     {
         opacity: 1;
-        left: 50%;
+        left: 0%;
     }
 }
 
@@ -789,11 +935,11 @@ h5
     0%
     {
         opacity: 1;
-        left: 50%;
+        left: 0%;
     }
     100%
     {
         opacity: 0;
-        left: 0%;
+        left: -50%;
     }
 }
