--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -439,7 +439,7 @@ p
     display: flex;
     flex-direction: column;
     top: 10%;
-    left: 25%;
+    left: 13%;
     font-weight: bold;
 }
 
@@ -447,7 +447,7 @@ p
 {
     position: absolute;
     top: 40%;
-    left: 58%;
+    left: 48%;
     width: 100%;
     height: fit-content;
 }
@@ -457,7 +457,7 @@ p
 {
     position: absolute;
     top: 45%;
-    left: 58%;
+    left: 48%;
     width: 100%;
     height: fit-content;
 }
@@ -466,10 +466,11 @@ p
 {
     position:absolute;
     top: 10%;
-    left: 50%;
+    left: 45%;
     width: 75%;
     height: 100%;
     text-align: left;
+    font-size: 10px;
 }
 
 .quotationBorder
@@ -478,7 +479,7 @@ p
     border-left: 8px solid;
     border-top: 8px solid;
     border-bottom: 8px solid;
-    left: 20%;
+    left: 8%;
     bottom: 0;
     width: 90%;
     height: 100%;
@@ -783,12 +784,14 @@ p
     grid-template-rows: 100%;
     width: 100%;
     height: 100%;
-    text-align: left;
+    text-align: center;
 }
 
 .doubleDescriptionTextContainer
 {
     position: relative;
+    width: 100%;
+    height: fit-content;
 }
 
 .doubleDescriptionTextContainer h4
@@ -814,7 +817,7 @@ p
 
 .removableBreakLine
 {
-    content: '\A';
+    display: block;
 }
 
 @media  screen and (max-width: 1068px)and (max-width:1068px) {
@@ -857,8 +860,9 @@ p
         }
         .removableBreakLine
         {
-            content: ' ';
+            display: none;
         }
+        
     }
     @media (orientation: landscape){
         .storySlideShow
@@ -911,7 +915,7 @@ p
     }
     .quotationContainer
     {
-        --p-height: 300px;
+        --p-height: 200px;
     }
     .navigationMenu
     {
@@ -931,6 +935,22 @@ p
     {
         --p-width: 17px;
         --p-height: 17px;
+    }
+    .quotationContainer h3
+    {
+        font-size: 12px;
+    }
+    .quotationContainer h2
+    {
+        font-size: 20px;
+    }
+    .quotationContainer p
+    {
+        font-size: 10px;
+    }
+    .doubleDescriptionText h4
+    {
+        font-size: 8px;
     }
 }
 
