--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,6 @@
     --bottomLayer: 1;
     --midLayer: 2;
     --topLayer: 3;
-
     --golden: #926d3c;
     --days: #7cb9ab;
     --district: #ffea00;
@@ -201,7 +200,7 @@ p
     display: flex;
     flex-direction: column;
     z-index: var(--topLayer);
-    right: 0;
+    right: -3%;
     bottom: 2%;
     width: var(--p-width);
     height: var(--p-height);
@@ -213,8 +212,8 @@ p
     border-color: white;
     border-width: 2px;
     background-color: black;
-    --p-width: 400px;
-    --p-height: 250px
+    --p-width: 350px;
+    --p-height: 225px
 }
 
 .aquaBackground
@@ -305,7 +304,7 @@ p
 
 .heroSection
 {
-    height: 8000px;  
+    height: 20000px;  
     width: 100%; 
 }
 
@@ -838,6 +837,107 @@ p
     display: block;
 }
 
+.footerSectionContainer
+{
+    position: relative;
+    width: 100%;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100%;
+}
+
+.footerSectionContacts
+{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    margin-bottom: 40px;
+}
+
+.footerSectionContacts a
+{
+    width: fit-content;
+    height: fit-content;
+}
+
+.footerSectionLinks
+{
+    width: 100%;
+    height: 100%;
+}
+
+.footerSectionContactsImg
+{
+    width: var(--p-width);
+    height: var(--p-height);
+    --p-width: 100px;
+    --p-heigth: 36px;
+}
+
+.footerSectionLinksContainer
+{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 33% 33% 33%;
+    width: 100%;
+    height: 100%;
+    text-align: left;
+}
+
+.footerSectionText
+{
+    height: 100%;
+    width: 100%;
+}
+
+.footerSectionSocialMedia
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.footerSectionSocialMediaImg
+{
+    width: var(--p-width);
+    height: var(--p-height);
+    --p-width: 70px;
+    --p-heigth: 70px;
+}
+
+.footerSectionSocialMediaImg img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.footerSectionSubLinks
+{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 25% 25%;
+    grid-template-rows: 100%;
+    margin-bottom: 10px;
+}
+
+.footerSectionSublinkText
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    text-align: left;
+}
+
 @media  screen and (max-width: 1068px)and (max-width:1068px) {
 
     @media (orientation: portrait) {
@@ -880,7 +980,21 @@ p
         {
             display: none;
         }
-        
+        .footerSectionContainer
+        {
+            grid-template-columns: 100%;
+            grid-template-rows: 50% 50%;
+        }
+        .footerSectionContactsImg
+        {
+            --p-width: 75px;
+            --p-height: 24px;
+        }
+        .footerSectionSocialMediaImg
+        {
+            --p-width: 35px;
+            --p-heigth: 35px;
+        }
     }
     @media (orientation: landscape){
         .storySlideShow
@@ -937,6 +1051,7 @@ p
 }
 
 @media only screen and (max-width: 734px)and (max-width:734px) {
+    
     .trioSlideShow div picture img {
         --p-width:192px;
         --p-height: 108px
